# learn-opengl

./: CMakeLists.txt  README.md
include/GLFW/: glfw3.h
include/glad/: glad.h
source/: CMakeLists.txt
source/get-start/: demo-window.cc  demo-window.h
source/glad/: glad.c
test/: CMakeLists.txt
test/get-start/: demo-window.cc
